waaahhh (cleanup ide warnings)